fix: z-index unshown

--- a/src/components/style.scss
+++ b/src/components/style.scss
@@ -16,7 +16,6 @@ $react-full-image-options:(
   position: fixed;
   top: 0;
   left: 0;
-  z-index: -1;
 
   @media screen and (max-width: $min-width){
     & {
